[package]
name = "r2048"
version = "0.1.0"
authors = ["Eleanor Quint <DrKwint@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
itertools = "*"
num = "*"

[lib]
name = "r2048"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]